;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(env
 (dev     (flags (:standard -w +a-4-9-40-41-42-44-45-48)))
 (release (flags (:standard -w +a-4-9-40-41-42-44-45-48))))

;; Too annoying to get to work. Use (copy_files# ...) instead
; (include_subdirs unqualified)
; (ignored_subdirs (lex yacc testsuite ocamldoc ocamltest toplevel otherlibs))


(copy_files# parsing/*.ml{,i})
(copy_files# src/programs/*.ml{,i})

(executables
 (names e0_transaction 
t0_foo_loop 
t0_foo 
t1_foo_goo_goo 
t1_foo_goo_goo1 
t1_foo_goo 
t2_foo_goo 
t3_foo_goo_loop 
t4_O_foo_goo_loop 
t5_foo_ABB )
 (modules e0_transaction
e0_transaction 
t0_foo_loop 
t0_foo 
t1_foo_goo_goo 
t1_foo_goo_goo1 
t1_foo_goo 
t2_foo_goo 
t3_foo_goo_loop 
t4_O_foo_goo_loop 
t5_foo_ABB 
))
