
; for building web version

(rule
 (action (copy parsing/hipjs.bc.js hipjs.bc.js)))
(rule
 (action (copy web/main.js main.js)))

(rule
 (target coi-serviceworker.min.js)
 (action (run curl -OL https://raw.githubusercontent.com/gzuidhof/coi-serviceworker/master/coi-serviceworker.min.js)))

(rule
 (alias web)
 (deps coi-serviceworker.min.js hipjs.bc.js bundle.js)
 (action (copy web/index.html index.html)))

(rule
 (targets z3-built.js z3-built.wasm z3-built.worker.js bundle.js)
 (deps main.js)
 (action (progn
  (run npm install z3-solver browserify)
  (run cp node_modules/z3-solver/build/z3-built.js z3-built.js)
  (run cp node_modules/z3-solver/build/z3-built.wasm z3-built.wasm)
  (run cp node_modules/z3-solver/build/z3-built.worker.js z3-built.worker.js)
  (system "node_modules/.bin/browserify main.js -o bundle.js --standalone z3")
  )))