
(library
 (name provers)
 (public_name heifer.provers)
 (libraries hipcore provers_common hipcore_typed)
 (modules provers)
 (virtual_modules provers)
 (default_implementation provers_native))

(library
 (name provers_common)
 (public_name heifer.provers_common)
 (libraries hipcore_typed)
 (modules provers_common))
