(cram
 (deps heifer.why landin.exe)
 (enabled_if (<> %{env:TEST_ALL=false} "false")))

(mdx
 (deps heifer.why)
 (libraries heifer)
 (enabled_if (<> %{env:TEST_ALL=false} "false")))

(rule
 (copy ../heifer.why heifer.why))

(executables
 (names landin foldr)
 (libraries heifer)
 (preprocess (pps ppx_print_tactic)))
