(cram
 (deps heifer.why (glob_files *.exe))
 (enabled_if (<> %{env:TEST_ALL=false} "false")))

(rule
 (copy ../heifer.why heifer.why))

(executables
 (names landin foldr foldr_auto equiv append times regex toss toss_auto append_auto times_auto
        landin_auto)
 (libraries heifer)
 (preprocess (pps ppx_print_tactic)))
