(library
 (name hipprover)
 (modules ProversEx entail forward_rules infer_types normalize rewriting rewriting2 heap biab simpl reduce_shift_reset)
 (libraries debug search hipcore provers utils iter provers_common z3 hipcore_typed)
 (inline_tests)
 (preprocess (pps ppx_expect)))

(env (dev (flags (:standard -warn-error -A))))
