(rule
 (targets camlinternalMenhirLib.ml)
 (mode    fallback)
 (action  (copy# ../../boot/menhir/menhirLib.ml %{targets})))

(rule
 (targets camlinternalMenhirLib.mli)
 (mode    fallback)
 (action  (copy# ../../boot/menhir/menhirLib.mli %{targets})))

(ocamllex
 (modules lexer)
 (mode fallback))

(menhir
 (modules parser)
 (flags (--explain)))

(library
 (name parsing_old)
 (public_name heifer.parsing_old)
 (modules parser lexer)
 (libraries hipcore))
