(env
 (dev
  (flags (:standard -w -50 -w -32 -w -27))))

(executables
 (names t0_loop)
 (modules t0_loop))

(executables
 (names t1_loop)
 (modules t1_loop))

(executables
 (names t2_loop)
 (modules t2_loop))

(executables
 (names t3_loop)
 (modules t3_loop))

(executables
 (names t4_loop)
 (modules t4_loop))

(executables
 (names t5_loop)
 (modules t5_loop))

(executables
 (names t7_loop)
 (modules t7_loop))
