(executables
 (names
  b0_env
  b1_env
  b2_open
  e0_transaction
  e1_transaction
  e2_nested_transaction
  t0_foo
  t0_foo_loop
  t1_foo_goo
  t1_foo_goo_goo
  t1_foo_goo_goo1
  t2_foo_goo
  t3_foo_goo_loop
  t3_foo_goo_loop_int
  t4_O_foo_goo_loop
  t5_foo_ABB)

 (modules
  b0_env
  b1_env
  b2_open
  e0_transaction
  e1_transaction
  e2_nested_transaction
  t0_foo
  t0_foo_loop
  t1_foo_goo
  t1_foo_goo_goo
  t1_foo_goo_goo1
  t2_foo_goo
  t3_foo_goo_loop
  t3_foo_goo_loop_int
  t4_O_foo_goo_loop
  t5_foo_ABB))
